--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <div class="left">Carniceria Don Chempo</div>
+        <div class="left">Carnicería Don Chempo</div>
     </header>
 
     <nav class="dropmenu">
