--- a/productos.html
+++ b/productos.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <div class="left">Carniceria Don Chempo</div>
+        <div class="left">Carnicería Don Chempo</div>
     </header>
 
     <nav class="dropmenu">
@@ -134,7 +134,7 @@
     </main>
 
     <footer>
-        <p>Carniceria Don Chempo | Av. San Martín 123, Local 456 | Tel: XXXXXXXX | Email: contact@carneschempo.com</p>
+        <p>Carnicería Don Chempo | Av. San Martín 123, Local 456 | Tel: XXXXXXXX | Email: contact@carneschempo.com</p>
         <div class="social-media">
             <a href="#"><img src="icons8-facebook-48.png" alt="Facebook"></a>
             <a href="#"><img src="icons8-instagram-48.png" alt="Instagram"></a>
